--- a/src/styles/global/header.css
+++ b/src/styles/global/header.css
@@ -54,6 +54,10 @@
 }
 
 @media (max-width: 1000px) {
+  .header {
+    padding: 2rem 3rem;
+  }
+
   .header-menu-right ul li:first-child {
     display: none;
   }
