--- a/src/styles/global/header.css
+++ b/src/styles/global/header.css
@@ -31,7 +31,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: calc(100vh - 85px);
+  height: 100vh;
   z-index: 1;
   background-color: var(--p6);
   padding: 2rem;
