Teste de ajuste no tamanho do menu mobile

--- a/src/styles/global/header.css
+++ b/src/styles/global/header.css
@@ -30,7 +30,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  min-width: 100%;
+  max-width: auto;
   height: 100vh;
   z-index: 1;
   background-color: var(--p6);
