--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -6,6 +6,7 @@ body{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background: var(--p6);
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, 
