--- a/src/styles/global/header.css
+++ b/src/styles/global/header.css
@@ -2,7 +2,7 @@
 .header-bg {
   background: var(--p6);
   box-shadow: 0 .125rem .125rem rgba(0,0,0,.1);
-  width: 100%;
+  width: 100vw;
 }
 
 .header {
@@ -30,8 +30,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 100%;
-  max-width: auto;
+  width: 100%;
   height: 100vh;
   z-index: 1;
   background-color: var(--p6);
