--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -1,3 +1,7 @@
+:root {
+  --shadow: 0 .25rem .25rem rgba(0, 0, 0, .1);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -5,8 +9,8 @@
 body{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: var(--p6);
   overflow-x: hidden;
+  background: var(--p6);
 }
 
 h1, h2, h3, h4, h5, h6, 
