--- a/src/styles/home/countdown.css
+++ b/src/styles/home/countdown.css
@@ -1,7 +1,7 @@
 .countdown-bg {
   background: var(--c2) url('../../img/dec/flower-light-bg.svg') no-repeat center;
   background-size: 300px;
-  width: 100vw;
+  width: 100%;
 }
 
 .countdown {
