--- a/src/styles/home/intro.css
+++ b/src/styles/home/intro.css
@@ -3,8 +3,7 @@
   background-size: cover;
   width: 100%;
   height: calc(100vh - 88px);
-  box-shadow: var(--shadow);
-  position: relative;
+  box-shadow: 0 .25rem .25rem rgba(0, 0, 0, .1);
 }
 
 .intro {
