--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -1,5 +1,7 @@
 :root {
   --shadow: 0 .25rem .25rem rgba(0, 0, 0, .1);
+  --shadow-top: 0 -0.25rem .25rem rgba(255, 0, 0, .1);
+  --gradient: linear-gradient(to bottom, var(--p5), var(--p6));
 }
 
 * {
@@ -10,7 +12,7 @@ body{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
-  background: var(--p6);
+  background: var(--c2);
 }
 
 h1, h2, h3, h4, h5, h6, 
