--- a/src/styles/home/countdown.css
+++ b/src/styles/home/countdown.css
@@ -1,5 +1,5 @@
 .countdown-bg {
-  background: var(--c2) url('../../img/dec/flower-light-bg.svg') no-repeat center;
+  background: url('../../img/dec/flower-light-bg.svg') no-repeat center;
   background-size: 300px;
   width: 100%;
 }
