--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,9 @@
 @import url('./utilities/colors.css');
 @import url('./utilities/typo.css');
-@import url('./utilities/components.css');
-@import url('./utilities/animation.css');
 
 @import url('./global/global.css');
 @import url('./global/header.css');
-@import url('./global/footer.css');
 
 @import url('./home/intro.css');
 @import url('./home/countdown.css');
+@import url('./home/historia.css');
