Teste com verde claro

--- a/src/styles/home/historia.css
+++ b/src/styles/home/historia.css
@@ -1,5 +1,5 @@
 .historia-bg {
-  background: var(--gradient);
+  background: var(--p3);
   padding: 9.25rem 9.25rem;
   box-shadow: var(--shadow-top), var(--shadow);
   overflow-x: hidden;
