--- a/src/styles/utilities/typo.css
+++ b/src/styles/utilities/typo.css
@@ -109,3 +109,28 @@
   line-height: 1.33;
 }
 
+@media (max-width: 1000px) {
+  .font-1-xxl {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .font-1-xxl {
+    font-size: 3rem;
+  }
+
+  .font-1-xl {
+    font-size: 1.5rem;
+  }
+
+  .font-2-m {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .font-1-xxl {
+    font-size: 2.5rem;
+  }
+}
