--- a/src/styles/home/historia.css
+++ b/src/styles/home/historia.css
@@ -69,7 +69,6 @@
   }
 }
 
-
 @media (max-width: 1000px) {
   .flower-2-left {
     width: 150px;
@@ -81,5 +80,11 @@
     width: 150px;
     top: -80px;
     right: -75px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .historia-bg {
+    padding: 7rem 1.5rem;
   }
 }
