--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,3 +7,4 @@
 @import url('./home/intro.css');
 @import url('./home/countdown.css');
 @import url('./home/historia.css');
+@import url('./home/galeria.css');
