--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@
 
 @import url('./global/global.css');
 @import url('./global/header.css');
+@import url('./global/footer.css');
 
 @import url('./home/intro.css');
 @import url('./home/countdown.css');
