--- a/src/styles/global/footer.css
+++ b/src/styles/global/footer.css
@@ -1,10 +1,16 @@
-footer {
+.footer-bg {
   background: var(--p5);
+}
+
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 4rem 9.25rem;
   gap: 2rem;
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 4rem 0;
 }
 
 .contato-item {
@@ -38,13 +44,13 @@ footer {
 }
 
 @media (max-width: 1500px) {
-  footer {
+  .footer {
     padding: 4rem 4rem;
   }
 }
 
 @media (max-width: 800px) {
-  footer {
+  .footer {
     flex-direction: column;
     padding: 1.5rem 1.5rem;
   }
