--- a/src/styles/global/header.css
+++ b/src/styles/global/header.css
@@ -22,15 +22,6 @@
   gap: 2.25rem;
 }
 
-.header-menu-right ul li {
-  background: var(--c2);
-  padding: 1rem 2rem;
-  outline: 2px solid var(--p4);
-  outline-offset: -.5rem;
-  border-radius: 2rem;
-  line-height: 1;
-}
-
 .menu-toggle {
   display: none;
 }
@@ -68,7 +59,7 @@
     padding: 2rem 3rem;
   }
 
-  .header-menu-right ul li:first-child {
+  .header-menu-right {
     display: none;
   }
 
