--- a/src/styles/utilities/components.css
+++ b/src/styles/utilities/components.css
@@ -1,3 +1,27 @@
+.botao-1 {
+  background: var(--c2);
+  padding: 1rem 2rem;
+  outline: 2px solid var(--p4);
+  outline-offset: -.5rem;
+  border-radius: 2rem;
+  line-height: 1;
+  color: var(--p5);
+  border: none;
+  max-width: fit-content;
+}
+
+.botao-2 {
+  background: var(--p5);
+  padding: 1rem 2rem;
+  outline: 2px solid var(--c1);
+  outline-offset: -.5rem;
+  border-radius: 2rem;
+  line-height: 1;
+  color: var(--c1);
+  border: none;
+  max-width: fit-content;
+}
+
 .container-bg {
   background: var(--p4);
   padding: 9.25rem 9.25rem;
