--- a/src/styles/rsvp/rsvp.css
+++ b/src/styles/rsvp/rsvp.css
@@ -1,24 +1,12 @@
+#rsvp {
+  background: var(--c3);
+}
+
 #rsvp .container-bg {
   background: var(--c3);
   flex-direction: column;
   box-shadow: none;
-}
-
-.title {
-  background: url('../../img/dec/flower-light-bg.svg') no-repeat center;
-  background-size: 150px;
-  width: 100%;
-  height: 150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 3rem;
-}
-
-.title h2 {
-  display: inline-block;
-  font-weight: bold;
-  border-bottom: 2px solid var(--p4);
+  padding: 0 9.25rem 9.25rem 9.25rem;
 }
 
 form {
@@ -53,11 +41,18 @@ input::placeholder {
   color: var(--c6);
 }
 
-input:type
-
 form button {
   margin-top: 2rem;
 }
 
+@media (max-width: 1000px) {
+  #rsvp .container-bg {
+    padding: 0 3rem 7rem 3rem;
+  }
+}
 
-
+@media (max-width: 500px) {
+  #rsvp .container-bg {
+    padding: 0 1.5rem 5rem 1.5rem;
+  }
+}
