--- a/src/styles/utilities/components.css
+++ b/src/styles/utilities/components.css
@@ -70,6 +70,23 @@
   right: -100px;
 }
 
+.title {
+  background: url('../../img/dec/flower-light-bg.svg') no-repeat center;
+  background-size: 150px;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 6rem auto;
+}
+
+.title h2 {
+  display: inline-block;
+  font-weight: bold;
+  border-bottom: 2px solid var(--p4);
+}
+
 @media (max-width: 1000px) {
   .container-bg {
     padding: 7rem 3rem;
@@ -91,9 +108,11 @@
     top: -65px;
     right: -100px;
   }
-}
 
-@media (max-width: 1000px) {
+  .title {
+    margin: 3rem auto;
+  }
+
   .flower-2-left {
     width: 150px;
     bottom: -75px;
