--- a/src/styles/presentes/presentes.css
+++ b/src/styles/presentes/presentes.css
@@ -2,14 +2,19 @@
   background: var(--c3);
 }
 
+.presentes-bg {
+    padding: 0 6rem;
+}
+
 .presentes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   max-width: 960px;
   width: 100%;
   margin: 0 auto 9.25rem auto;
   gap: 1rem;
-
+  justify-content: center;
+  align-items: center;
 }
 
 .container-presente {
@@ -23,8 +28,9 @@
   outline: 2px solid var(--p4);
   outline-offset: -1rem;
   box-shadow: var(--shadow);
-  margin: 0 auto;
   position: relative;
+  width: 20%;
+  min-width: 240px;
 }
 
 .desc-preco {
@@ -40,13 +46,23 @@
   text-align: right;
 }
 
+
+
 @media (max-width: 1000px) {
+  .presentes-bg {
+    padding: 0 3rem;
+  }
+
   .presentes {
       margin: 0 auto 7rem auto;
   }
 }
 
 @media (max-width: 500px) {
+  .presentes-bg {
+    padding: 0 1.5rem;
+  }
+
   .presentes {
       margin: 0 auto 5rem auto;
   }
