--- a/src/styles/rsvp/rsvp.css
+++ b/src/styles/rsvp/rsvp.css
@@ -45,6 +45,11 @@ form button {
   margin-top: 2rem;
 }
 
+input:focus, textarea:focus {
+  outline: none;
+  border: 1px solid var(--p4);
+}
+
 @media (max-width: 1000px) {
   #rsvp .container-bg {
     padding: 0 3rem 7rem 3rem;
