--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,3 +17,6 @@
 @import url('./presentes/presentes.css');
 
 @import url('./orientacoes/orientacoes.css');
+@import url('./orientacoes/local.css');
+@import url('./orientacoes/aviso.css');
+@import url('./orientacoes/dicas.css');
