--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -30,6 +30,11 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+  border-bottom: 1px solid var(--c6);
+}
+
+a:hover {
+  border-bottom: 1px solid var(--c8);
 }
 
 img {
