--- a/src/styles/global/music.css
+++ b/src/styles/global/music.css
@@ -9,15 +9,16 @@
   justify-content: center;
   align-items: center;
   z-index: 20;
+  padding: 3rem;
 }
 
 .container.modal-content {
   max-width: 600px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  margin: 3rem;
 }
 
 .modal-buttons {
