--- a/src/styles/home/intro.css
+++ b/src/styles/home/intro.css
@@ -1,19 +1,42 @@
 .intro-bg {
-  background: var(--p3) url('../../img/dec/header-bg.svg') no-repeat center;
-  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: calc(100vh - 82px);
   box-shadow: 0 .25rem .25rem rgba(0, 0, 0, .1);
 }
 
-.intro {
+.intro-left {
+  height: 100%;
+  width: 50%;
+  background: url('../../img/pictures/header.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.intro-right {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
+  width: 50%;
+  background: var(--p3) url('../../img/dec/header-bg.svg') no-repeat center;
+  background-size: cover;
 }
 
-.intro img {
-  height: 30%;
-  width: auto;
+.intro-right img {
+  max-width: 40%;
+}
+
+
+@media (max-width: 1000px) {
+  .intro-bg {
+    height: 80vh;
+  }
+}
+
+@media (max-width: 500px) {
+  .intro-bg {
+    height: 50vh;
+  }
 }
