--- a/src/styles/orientacoes/local.css
+++ b/src/styles/orientacoes/local.css
@@ -1,3 +1,11 @@
-.local h2{
-  margin-bottom: 1rem;
+.local-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.local-text span {
+  font-weight: bold;
 }
